RESOLVED FIXED237929
Unreviewed, non-unified build fix
https://bugs.webkit.org/show_bug.cgi?id=237929
Summary Unreviewed, non-unified build fix
Mikhail R. Gadelha
Reported 2022-03-15 15:56:06 PDT
Unreviewed, non-unified build fix
Attachments
Patch (4.35 KB, patch)
2022-03-15 15:56 PDT, Mikhail R. Gadelha
no flags
Mikhail R. Gadelha
Comment 1 2022-03-15 15:56:29 PDT
EWS
Comment 2 2022-03-17 10:03:18 PDT
Committed r291417 (248544@main): <https://commits.webkit.org/248544@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 454767 [details].
Radar WebKit Bug Importer
Comment 3 2022-03-17 10:04:18 PDT
Note You need to log in before you can comment on or make changes to this bug.