Unreviewed, non-unified build fix https://bugs.webkit.org/show_bug.cgi?id=237929

* dfg/DFGCapabilities.cpp:
* jit/JITDisassembler.cpp:
* jit/JITPlan.cpp:
* llint/LLIntEntrypoint.cpp:
* runtime/FileBasedFuzzerAgentBase.cpp:
* runtime/ShadowRealmObject.cpp:
* runtime/ShadowRealmPrototype.cpp:



Canonical link: https://commits.webkit.org/248544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291417 268f45cc-cd09-0410-ab3c-d52691b4dbfc